fix: letter-spacing

--- a/src/components/AboutProject/components/Factoid.css
+++ b/src/components/AboutProject/components/Factoid.css
@@ -2,7 +2,7 @@
   margin: 0 0 26px;
   font-size: 20px;
   line-height: 24px;
-  letter-spacing: -0.44px;
+  letter-spacing: -0.8px;
 }
 
 .factoid__description {
@@ -27,6 +27,7 @@
     margin: 0 0 16px;
     font-size: 18px;
     line-height: 22px;
+    letter-spacing: -0.72px;
   }
 
   .factoid__description {
