--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -3,7 +3,7 @@
   width: 100%;
   grid-column: 1 / -1;
   font-weight: 400;
-  letter-spacing: -0.44px;
+  letter-spacing: -0.88px;
   padding-bottom: 23px;
   border-bottom: 1px solid var(--color-lines-primary);
   font-size: 22px;
@@ -15,5 +15,6 @@
     padding-bottom: 28px;
     font-size: 18px;
     line-height: 22px;
+    letter-spacing: -0.72px;
   }
 }
