--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  letter-spacing: -0.44px;
   padding-block: 100px;
 }
 
@@ -11,6 +10,7 @@
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
+  letter-spacing: -2px;
 }
 
 .techs__subtitle {
@@ -19,6 +19,7 @@
   text-align: center;
   font-size: 14px;
   line-height: 20px;
+  letter-spacing: -0.56px;
 }
 
 .techs__list {
@@ -45,6 +46,7 @@
   .techs__subtitle {
     font-size: 12px;
     line-height: 18px;
+    letter-spacing: -0.48px;
   }
 
   .techs__list {
@@ -63,11 +65,13 @@
     margin: 60px 0 24px;
     font-size: 30px;
     line-height: 36px;
+    letter-spacing: -1.2px;
   }
 
   .techs__subtitle {
     font-size: 11px;
     line-height: 16px;
+    letter-spacing: -0.44px;
   }
 
   .techs__list {
