--- a/src/components/Techs/components/TechItem.css
+++ b/src/components/Techs/components/TechItem.css
@@ -6,10 +6,12 @@
   justify-content: center;
   align-items: center;
   font-size: 14px;
+  letter-spacing: -0.56px;
 }
 
 @media screen and (max-width: 1024px) {
   .techs__item {
     font-size: 12px;
+    letter-spacing: -0.48px;
   }
 }
